Fix the description on my post

--- a/src/content/posts/2024/iterating.mdx
+++ b/src/content/posts/2024/iterating.mdx
@@ -1,6 +1,6 @@
 ---
 title: The other side of growth
-description: What
+description: Considering the impact that my professional growth as a software engineer has had on my skills as a designer. Where there is growth, there can also be loss.
 pubDate: 2024-06-02
 category: General
 ---
