The commit when I realize my spell check wasn’t running

--- a/src/content/posts/2024/iterating.mdx
+++ b/src/content/posts/2024/iterating.mdx
@@ -14,7 +14,7 @@ I've been thinking a lot about the design for this website as [I build it in pub
 
 ## My journey
 
-Over the past nineteen years, my story arc takes me from being a designer who could code and ends up with me as a coder who occassionally designs. In my early days, I primarily designed websites in Photoshop, and then took the steps needed to turn them into running websites. I sprinkled in just enough of JavaScript to add some animations or other interactivity. In time I settled into a hybrid approach where I designed in Photoshop or Illustrator until the design tool was more work than simply coding the website. If I got stuck on a detail while coding, I'd take a screenshot of the design back into Photoshop to figure it out. I never was 100% on board with designing fully in the browser. It was too tempting to settle for what was easy instead of pushing for designs that might be difficult to replicate in CSS.
+Over the past nineteen years, my story arc takes me from being a designer who could code and ends up with me as a coder who occasionally designs. In my early days, I primarily designed websites in Photoshop, and then took the steps needed to turn them into running websites. I sprinkled in just enough of JavaScript to add some animations or other interactivity. In time I settled into a hybrid approach where I designed in Photoshop or Illustrator until the design tool was more work than simply coding the website. If I got stuck on a detail while coding, I'd take a screenshot of the design back into Photoshop to figure it out. I never was 100% on board with designing fully in the browser. It was too tempting to settle for what was easy instead of pushing for designs that might be difficult to replicate in CSS.
 
 Fast-forward fourteen years and now I describe myself as software engineer and often don't even mention myself as a designer. I'm still involved in design since I work on a design system team, but that is focused in <abbr title="Software as a Service">SaaS</abbr> web application design and my role is primarily development. Its quite different from building brochure websites for churches and businesses!
 
@@ -22,7 +22,7 @@ I've loved my professional journey, and I still deeply enjoy learning new things
 
 ## Design styles have changed
 
-I think one of the pieces that has been challenging is how much web design styles have changed during the years I've been focused on development. In one way the minimimalistic styles make design a little easier… but nailing those looks, while still including quality and subtle details, feels daunting.
+I think one of the pieces that has been challenging is how much web design styles have changed during the years I've been focused on development. In one way the minimalistic styles make design a little easier… but nailing those looks, while still including quality and subtle details, feels daunting.
 
 My old website (circa 2010) was a mashup of real world textures and concepts. I've always been drawn to skeuomorphic design and was a touch sad when Apple moved away from that in their mobile apps.
 
@@ -34,7 +34,7 @@ Almost 9 years later, my [hobby woodworking website](https://dnhandcrafted.com) 
 
 ## Tooling and approaches have changed
 
-I'm a big fan of [Figma](https://www.figma.com/), and plan to design this website using it. However, despite _liking_ the product, designing in it still feels foreign to me. In some ways it feels more like coding than designing as I think through reusable components and variables. I probaly just need to chill out and get some designs flowing before I think about structing them!
+I'm a big fan of [Figma](https://www.figma.com/), and plan to design this website using it. However, despite _liking_ the product, designing in it still feels foreign to me. In some ways it feels more like coding than designing as I think through reusable components and variables. I probably just need to chill out and get some designs flowing before I think about structuring them!
 
 Thinking mobile first has been a consideration for years… yet my brain still wants to think desktop first, then adapt for mobile. Given how much content is consumed on mobile devices, I really need to change my thinking on this.
 
